[package]
name = "pzem016lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["tracing", "macros", "rt-multi-thread"] }
tokio-modbus = { version = "0.9.0", features = ["tcp"] }
tokio-retry = "0.3.0"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
